# models

./: .gitignore  Cargo.toml  README.md  asd.rb  datatype  main.rb  main.rs  planning.rs  rustfmt.toml  tempCodeRunnerFile  todo.txt
models/: Cargo.toml
models-cli/: Cargo.toml  README.md
models-cli/src/: database.rs  generate.rs  lib.rs  migrate.rs  opt.rs  shell.rs
models-parser/: Cargo.toml  README.md
models-parser/src/: lib.rs  parser.rs  test_utils.rs  tokenizer.rs
models-parser/src/ast/: data_type.rs  ddl.rs  mod.rs  operator.rs  query.rs  value.rs
models-parser/src/ast/expression/: display.rs  mod.rs
models-parser/src/ast/statement/: display.rs
models-parser/src/dialect/: keywords.rs  mod.rs
models-parser/tests/: common.rs  hive.rs  mssql.rs  mysql.rs  postgres.rs  regression.rs  snowflake.rs  sqlite.rs
models-parser/tests/test_utils/: mod.rs
models-proc-macro/: Cargo.toml
models-proc-macro/src/: getters.rs  lib.rs  migration_generation.rs  prelude.rs
models-proc-macro/src/model/: constraint.rs  has_many.rs  has_one.rs  mod.rs  table_name.rs
models-proc-macro/src/model/column/: default.rs  mod.rs
models-proc-macro/src/model/constraint/: foreign_key.rs  mod.rs  unique.rs
models-proc-macro/src/model1/: constraint.rs
models-proc-macro/src/model2/: constraint.rs  mod.rs
models-proc-macro/src/model2/column/: default.rs  mod.rs
models-proc-macro/src/model2/constraint/: foreign_key.rs  mod.rs  unique.rs
models-proc-macro/src/orm/: constructor.rs  mod.rs
models-proc-macro/src/orm/getters/: getter.rs  mod.rs
models-proc-macro/src/orm/getters/getter/: foreign_getter.rs  getter_variant.rs  has_many_getter.rs  has_one_getter.rs  mod.rs  unique_getter.rs
models-proc-macro/src/table_derive/: column.rs  constraint.rs  mod.rs  validation.rs
models/src/: dialect.rs  error.rs  lib.rs  prelude.rs  types.rs
models/src/database/: mod.rs  queries.rs
models/src/orm/: connection.rs  error.rs  mod.rs  queries.rs  query.rs  sql_type.rs  traits.rs
models/src/orm/queries/: static_key.rs
models/src/private/: mod.rs
models/src/private/orm/: connection.rs  error.rs  mod.rs  queries.rs  queries_.rs
models/src/private/orm/queries/: mod.rs
models/src/private/scheduler/: mod.rs
models/src/private/scheduler/driver/: migration.rs  mod.rs  queue.rs  report.rs  schema.rs  tuple.rs
models/src/private/scheduler/driver/actions/: action.rs  change.rs  compare.rs  constraint.rs  crud.rs  inner.rs  mod.rs
models/src/private/scheduler/driver/actions/action/: mod.rs  temp_move.rs
models/src/private/scheduler/driver/migration/: mod.rs
models/src/private/scheduler/driver/queue/: mod.rs  sorter.rs
models/src/private/scheduler/driver/schema/: mod.rs
models/src/private/scheduler/migration/: mod.rs
models/src/private/scheduler/table/: column.rs  constraint.rs  mod.rs
models/src/private/scheduler/table/column/: mod.rs
models/src/private/scheduler/table/constraint/: mod.rs
models/src/tests/: mod.rs
models/src/types/: auto_increment.rs  chrono_impl.rs  json.rs  mod.rs  serial.rs  time.rs  var_binary.rs  var_char.rs
sqlx-models/: Cargo.toml  README.md
sqlx-models-cli/: Cargo.toml  README.md
sqlx-models-cli/src/: generate.rs  lib.rs  migrate.rs  opt.rs
sqlx-models-parser/: Cargo.toml
sqlx-models-proc-macro/: Cargo.toml
sqlx-models-proc-macro/src/: derive_model.rs  generate_getters.rs  lib.rs  migration_generation.rs  prelude.rs
sqlx-models-proc-macro/src/generation/: getters.rs  migration.rs  mod.rs
sqlx-models-proc-macro/src/model/: constraint.rs  mod.rs
sqlx-models-proc-macro/src/model/column/: default.rs  mod.rs
sqlx-models-tests/: Cargo.toml  database.db  database.db-shm  database.db-wal
sqlx-models-tests/src/: main.rs
sqlx-models/sqlite/: mod.rs
sqlx-models/src/: error.rs  example.rs  lib.rs  prelude.rs  scheduler.rs  sorter.rs
sqlx-models/src/migration/: change.rs  mod.rs  schema.rs  state.rs
sqlx-models/src/migration/schema/: migration_computation.rs  mod.rs  schema_initialization.rs
sqlx-models/src/migration/table/: column.rs  constraint.rs  get_changes.rs  mod.rs
sqlx-models/src/model/: mod.rs  primitives.rs  sqltypes.rs
sqlx-models/src/scheduler/: mod.rs
sqlx-models/src/scheduler/migration/: mod.rs  queue.rs
sqlx-models/src/scheduler/migration/schema/: migration_computation.rs  mod.rs  schema_initialization.rs
sqlx-models/src/scheduler/table/: column.rs  constraint.rs  get_changes.rs  mod.rs
testing/: Cargo.toml
testing/src/: main.rs
tests/: Cargo.toml
tests/migrations/: 1630433399837509000_User.sql
tests/src/: main.rs
