[package]
name = "models-proc-macro"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A helper crate for `models`"

[lib]
proc-macro = true

[features]
orm = []

[dependencies]
proc-macro2 = "1.0.28"
quote = "1.0.9"
models-parser ={version = "0.2.0", path = "../models-parser"}
syn = "1.0.74"
Inflector = "0.11.4"


[dev-dependencies]
models-proc-macro = {path ="../models-proc-macro", features=["orm"]}
