[package]
name = "sqlx-models"
version = "0.0.5"
edition = "2018"
authors = ["Tomas Vallotton <tvallotton@uc.cl>"]
license = "MIT OR Apache-2.0"
description = "A work in progress implementation of a migration tool for sqlx."
keywords = ["database", "postgres", "sqlite", "sql", "migration"]
readme = "../README.md"

[features]
helpers = ["sqlx-models-proc-macro/helpers"]
json = ["serde", "sqlx/json"]
binary = ["serde", "bincode"]

[dependencies]
sqlx-models-parser = "0.0.1"
url = "2.2.2"
sqlx-models-proc-macro = "0.0.3"
chrono = "0.4.19"
fehler = "1.0.0"
sqlformat = "0.1.7"
once_cell = "1.8.0"
topological-sort = "0.1.0"
thiserror = "1.0.29"
itertools = "0.10.1"

[dependencies.sqlx]
version = "0.5.7"
optional = true
features = ["json"]

[dependencies.serde]
version = "1.0.130"
optional = true

[dependencies.bincode]
version = "1.3.3"
optional = true

[dev-dependencies]
sqlx = { version = "0.5.7", features = ["any", "runtime-async-std-native-tls"] }
sqlx-models = { path = "../sqlx-models", features = ["json", "binary"] }
