[package]
name = "tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
once_cell = "1.8.0"
sqlx = { version = "0.5.7", features = ['runtime-async-std-rustls'] }
sqlx-models = { version = "0.0.1", path = "../sqlx-models" }
